--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+
 body{
-    /* background-image: url('/static/bg.png'); */
     background-color: black;
     opacity: 0.9;
 }
@@ -40,7 +41,7 @@ a, p, h2, h5{
 }
 
 .main{
-    font-family: 'Black Ops One', cursive;
+    font-family: 'Orbitron', sans-serif;
     font-size: 2.6rem;
 }
 
@@ -88,8 +89,7 @@ hr{
 
 i{
     margin-left: 10px;
-    margin-right: 10px;
-    padding: 5px;
+    margin-right: 5px;
     color: white;
     transition: color 1s;
 }
@@ -129,4 +129,12 @@ table:not(.codehilitetable) > tbody > tr > td{
     text-align: left;
     color: white;
     padding: 10px;
+}
+
+td.linenos pre{
+    background-color: black !important;
+}
+
+.codehilite .c1{
+    color: #8cff00;
 }
