--- a/blog/templates/_social.html
+++ b/blog/templates/_social.html
@@ -1,4 +1,4 @@
-<h2 class="text-center post-header">Social Platforms</h2>
+<h2 class="text-center post-header mt-2">Social Platforms</h2>
 <br>
 <div class="social text-center">
     <a href="https://github.com" target="_blank"><i class="fab fa-github fa-3x"></i></a>
