--- a/blog/templates/tag.html
+++ b/blog/templates/tag.html
@@ -4,7 +4,7 @@
     <h2 class="text-center post-header">Tag: <em>{{ tag }}</em></h2>
     <br>
     {% with pages=pages  %}
-        <ul class="list-group">
+        <ul class="list-group" style="list-style-type: none;">
         {% for page in pages %}
             <li>
                 <a class="text-center post list-group-item mb-2 link" href="{{ url_for('page', path=page.path) }}">{{ page.title }}</a>
