README Atualizado e Pequeno Ajuste

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2 class="text-center post-header">Blog Posts ({{ total_post }})</h2>
+    <h2 class="text-center post-header">Blog Posts</h2>
     <br>
     <div class="list-group">
         <input type="text" id="search-input" placeholder="Search posts...">
